app/css/style.css
/* ... */
html.light .modal {
  box-shadow: -0.5px -0.5px 0 0.5px #485058, 0 0 0 1px #0a0c0e,
    -0.5px -0.5px 0 1.5px #485058, 0 0 0 2px #0a0c0e;
}

.root-wrapper {
  border: calc(var(--cell-size) * 0.3542) solid var(--cell-background-color);
}

.root__header {
  display: flex;
  justify-content: space-between;
  padding: calc(var(--cell-size) * 0.1875);
  background-color: var(--cell-background-color);
  border: calc(var(--cell-size) * 0.1875) solid;
  border-color: var(--minesweeper-first-border-color)
    var(--minesweeper-second-border-color)
    var(--minesweeper-second-border-color) var(--minesweeper-first-border-color);
}

.header-wrapper {
  border-bottom: calc(var(--cell-size) * 0.3542) solid
    var(--cell-background-color);
}

#root {
  display: grid;
  grid-template-columns: repeat(var(--field-width), var(--cell-size));
  grid-template-rows: repeat(var(--field-height), var(--cell-size));
  width: fit-content;
  height: fit-content;
  border: calc(var(--cell-size) * 0.1875) solid;
  border-color: var(--minesweeper-first-border-color)
    var(--minesweeper-second-border-color)
    var(--minesweeper-second-border-color) var(--minesweeper-first-border-color);
}

.counter {
  display: flex;
  width: calc(var(--cell-size) * 2.5625);
  height: calc(var(--cell-size) * 1.5625);
  gap: calc(var(--cell-size) * 0.125);
  box-sizing: border-box;

  text-align: end;

  position: relative;
  border: calc(var(--cell-size) * 0.09375) solid;
  border-color: var(--minesweeper-first-border-color)
    var(--minesweeper-second-border-color)
    var(--minesweeper-second-border-color) var(--minesweeper-first-border-color);
  background-color: #000000;
}

.counter__element {
  overflow: hidden;
  background-image: url("../img/num-bg.svg");
  background-size: cover;
  width: calc(var(--cell-size) * 2.5625 - (var(--cell-size) * 0.125 * 2));
  height: 100%;
}

.counter__element.type-num- {
  background: url("../img/num-.svg");
  background-size: contain;
}

.counter__element.type-num0 {
  background: url("../img/num0.svg") center no-repeat;
  background-size: contain;
}

.counter__element.type-num1 {
  background: url("../img/num1.svg") center no-repeat;
  background-size: contain;
}

.counter__element.type-num2 {
  background: url("../img/num2.svg") center no-repeat;
  background-size: contain;
}

.counter__element.type-num3 {
  background: url("../img/num3.svg") center no-repeat;
  background-size: contain;
}

.counter__element.type-num4 {
  background: url("../img/num4.svg") center no-repeat;
  background-size: contain;
}

.counter__element.type-num5 {
  background: url("../img/num5.svg") center no-repeat;
  background-size: contain;
}

.counter__element.type-num6 {
  background: url("../img/num6.svg") center no-repeat;
  background-size: contain;
}

.counter__element.type-num7 {
  background: url("../img/num7.svg") center no-repeat;
  background-size: contain;
}

.counter__element.type-num8 {
  background: url("../img/num8.svg") center no-repeat;
  background-size: contain;
}

.counter__element.type-num9 {
  background: url("../img/num9.svg") center no-repeat;
  background-size: contain;
}

.cell {
  box-sizing: border-box;
  display: block;
  text-align: center;
  background-color: var(--cell-background-color);

  font-size: calc(var(--cell-size) * 0.5);
}

.cell.closed {
  border: calc(var(--cell-size) * 0.125) solid;
  border-color: var(--minesweeper-second-border-color)
    var(--minesweeper-first-border-color) var(--minesweeper-first-border-color)
    var(--minesweeper-second-border-color) !important;
}

.cell.opened {
  border: calc(var(--cell-size) * 0.03) solid
    var(--minesweeper-first-border-color) !important;
}

.cell.flagged {
  background-image: url("../img/flag.svg");
  background-size: contain;
  border-color: var(--minesweeper-second-border-color)
    var(--minesweeper-first-border-color) var(--minesweeper-first-border-color)
    var(--minesweeper-second-border-color) !important;
}

.cell.fail {
  background-color: var(--mine-touched-color) !important;
}

.settings {
  font-size: 1.125rem;
  line-height: 1.2;

  width: 100%;
  display: flex;
  flex-direction: column;
  margin-bottom: 1.5rem;
  gap: 1rem;
}

.settings__header {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 1rem;
}

.settings__aside {
  display: flex;
  align-items: center;
  gap: 1rem;
}

/* no functional with more-settings now *\
/* maybe add in future  *\
/* .more-settings {
  width: 2rem;
  height: 2rem;
  background-size: contain;
  transition: transform 0.3s ease 0s;
}

html.light .more-settings {
  background-image: url("../img/light/settings.svg");
}

html.dark .more-settings {
  background-image: url("../img/dark/settings.svg");
}

.more-settings:hover {
  cursor: pointer;
  transform: rotate(90deg);
} */

.label {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.levels {
  display: flex;
  gap: 1rem;
}

.level__item {
  color: var(--link-color);
  transition: color 0.3s ease 0s;
}

.level__item:hover {
  cursor: pointer;
  color: var(--link-hover-color);
}

.settings__custom {
  display: none;
}

.settings__custom._active {
  display: flex;
  gap: 1rem;
  flex-wrap: wrap;
}

.input {
  width: 6.25rem;
  padding: 0.25rem 0.5rem;
  font-size: 1.125rem;
  font-family: "Arial", sans-serif;
  border: 0.125rem solid #ccc;
  border-radius: 0.5rem;
  background-color: var(--background-color);
  color: var(--text-color);
  outline: none;
  transition: border-color 0.3s ease, box-shadow 0.3s ease;
  box-sizing: border-box;
}

.input:hover {
  border-color: var(--input-hover-border-color);
}

.input:focus {
  border-color: var(--input-hover-border-color);
  box-shadow: 0 0 1.5rem rgba(0, 123, 255, 0.2);
}
/* ... */

